Separate data folder from resources